--- a/package.json
+++ b/package.json
@@ -26,16 +26,26 @@
   "devDependencies": {
     "@babel/core": "^7.5.0",
     "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.0",
     "@babel/plugin-transform-runtime": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
-    "@commitlint/cli": "^8.0.0",
+    "@babel/runtime": "^7.5.1",
+    "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.0.0",
+    "@open-wc/testing": "^1.0.6",
+    "@open-wc/testing-helpers": "^1.0.6",
+    "@open-wc/testing-karma": "^3.0.7",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
     "babel-eslint": "^10.0.2",
+    "bundlesize": "^0.18.0",
+    "chai": "^4.2.0",
     "conventional-changelog": "^3.1.8",
     "eslint": "^6.0.1",
     "eslint-config-semistandard": "^13.0.0",
     "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-chai-expect": "^2.0.1",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.0",
@@ -44,8 +54,21 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^3.0.0",
+    "karma": "^4.1.0",
+    "lit-html": "^1.1.1",
+    "mocha": "^6.1.4",
+    "must": "^0.13.4",
     "npm-run-all": "^4.1.5",
-    "semistandard": "^13.0.1"
+    "rollup": "^1.16.6",
+    "rollup-plugin-analyzer": "^3.1.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^5.1.0",
+    "semistandard": "^13.0.1",
+    "sinon": "^7.3.2",
+    "typescript": "^3.5.3",
+    "webpack-merge": "^4.2.1"
   },
   "config": {
     "commitizen": {
