--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "commit": "npx git-cz",
     "semistandard": "npx semistandard",
-    "test": "npx npm-run-all --serial semistandard"
+    "type-check": "npx tsc --noEmit",
+    "test": "npx npm-run-all --serial semistandard type-check karma build size",
+    "size": "npx bundlesize",
+    "karma": "karma start --coverage",
+    "karma:watch": "karma start --auto-watch=true --single-run=false",
+    "build": "npx rollup -c"
   },
   "repository": {
     "type": "git",
@@ -63,6 +68,10 @@
     "rollup-plugin-analyzer": "^3.1.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-ejs": "^2.2.0",
+    "rollup-plugin-emit-ejs": "^2.0.3",
+    "rollup-plugin-generate-html-template": "^1.2.0",
+    "rollup-plugin-html-minifier": "^1.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.1.0",
     "semistandard": "^13.0.1",
