--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "karma": "karma start --coverage",
     "karma:watch": "karma start --auto-watch=true --single-run=false",
     "build": "npx rollup -c",
-    "watch": "npx rollup -c -w"
+    "watch": "npx rollup -c -w",
+    "serve": "npx http-server",
+    "start": "npx npm-run-all --parallel serve watch"
   },
   "repository": {
     "type": "git",
@@ -59,6 +61,7 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
+    "http-server": "^0.11.1",
     "husky": "^3.0.0",
     "karma": "^4.1.0",
     "lit-html": "^1.1.1",
