build: set up the frame of micropage

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     ]
   },
   "dependencies": {
+    "@vaadin/vaadin": "^14.0.10",
     "firebase": "^7.0.0",
     "lit-element": "^2.2.1"
   }
