--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
   "dependencies": {
     "@vaadin/vaadin": "^14.0.10",
     "firebase": "^7.0.0",
+    "listbox-combobox": "^1.1.1",
     "lit-element": "^2.2.1"
   }
 }
