--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@vaadin/vaadin": "^14.0.10",
     "firebase": "^7.0.0",
     "listbox-combobox": "^1.1.1",
-    "lit-element": "^2.2.1"
+    "lit-element": "^2.2.1",
+    "weightless": "0.0.34"
   }
 }
