--- a/package.json
+++ b/package.json
@@ -109,6 +109,8 @@
   "dependencies": {
     "@polymer/paper-dropdown-menu": "^3.0.1",
     "@vaadin/vaadin": "^14.0.10",
+    "d3": "^5.12.0",
+    "d3-sankey": "^0.12.3",
     "firebase": "^7.0.0",
     "listbox-combobox": "^1.1.1",
     "lit-element": "^2.2.1",
