--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "d3": "^5.12.0",
     "d3-sankey": "^0.12.3",
     "firebase": "^7.0.0",
+    "google-charts": "^2.0.0",
     "listbox-combobox": "^1.1.1",
     "lit-element": "^2.2.1",
     "weightless": "0.0.34"
